[package]
name = "decode"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
clap = { version = "4.1.6", features = ["derive"] }
iced = "0.8"
reqwest = { version = "0.11.14", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
termimad = "0.21.0"

[dev-dependencies]
anyhow = "1"
